# scripture_loom

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
content_bank/: PROVENANCE.md  README.md
content_bank/author/: .build_draft_prompt.py.swp  build_brief_prompt.py  build_cli.py  build_draft_prompt.py  build_reference_prompt.py  build_section_brief_prompt.py  build_section_draft_prompt.py  build_translate_prompt.py  compare_html.py  digest.py  dimensions.py  gates.py  glossary.json  glossary.py  glossary_coverage.py  llm.py  manifest.py  publish.py  quote_detect.py  review.py  review_checklist.py  rubric.py  store_writer.py  theological_lexicon.json  translate.py  translate_cli.py  translate_compare_html.py
content_bank/lib/: citation_tags.py  content.py  corpus_bridge.py  prototype_bank.py  schema.py  standards.py  validate.py
content_bank/store/: ecc.json  mat.json  php.json
content_bank/tests/: test_author.py  test_build_cli.py  test_citation_check.py  test_citation_tags.py  test_compare_html.py  (+27 more)
corpus/: PROVENANCE.md  README.md
docs/: 2026-07-19-cross-pericope-probe-findings.md  2026-07-19-genre-dimension-probe-findings.md  content_build_terminology.md  content_builder_usage.md  core_principles.md  design-kit_generator.md  feature-listening_transcription.md  motto.md  sample-kit-matthew_5_1-12.md  unplug_assitant.md
llm_core/: PROVENANCE.md  __init__.py  config.py  errors.py  schemas.py  service.py  sync.py
prototype/: README.md  content_bank.json  family.json  generate_kit.py  sample_output.md  selector.py  test_selector.py
(+439 files in other folders)
